# cellrank

./: .bumpversion.cfg  .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .rstcheck.cfg  .travis.yml  .travis.yml.swp  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  biome.jsonc  pixi.toml  pyproject.toml  pytest.ini  qgq  qgs  requirements.txt  setup.py  tox.ini  vendorize.toml
.github/: .codecov.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yaml  build_docs_workflow.yml  ci.yml  cov.yml  coverage.yml  deployment.yml  lint.yml  news.yml  regenerate_docs.yml  release.yaml  release.yml  test.yaml  test.yml  workflow.yml
.scripts/ci/: before_install.sh  install.sh  install_dependencies.sh  install_petsc_linux.sh  static_analysis.sh  test.sh  update_bioconda.sh  update_notebooks.sh  update_notebooks_readme.sh  upload_bioconda.sh  upload_coverage.sh
.scripts/travis/: before_install.sh  install.sh  test.sh  upload_coverage.sh
cellrank/: __init__.py  _key.py  estimators.py  kernels.py  models.py
cellrank/_utils/: __init__.py  _colors.py  _docs.py  _enum.py  _key.py  _lineage.py  _linear_solver.py  _parallelize.py  _utils.py
cellrank/datasets/: __init__.py  _datasets.py
cellrank/estimators/: __init__.py  _base_estimator.py
cellrank/estimators/mixins/: __init__.py  _absorption_probabilities.py  _fate_probabilities.py  _lineage_drivers.py  _utils.py
cellrank/estimators/terminal_states/: _cflare.py  _gpcca.py  (+1 more)
cellrank/kernels/: __init__.py  _base_kernel.py  _connectivity_kernel.py  _cytotrace_kernel.py  _experimental_time_kernel.py  _monge_kernel.py  _moscot_kernel.py  _precomputed_kernel.py  _pseudotime_kernel.py  _transport_map_kernel.py  _utils.py  _velocity_kernel.py
cellrank/logging/: __init__.py  _logging.py
cellrank/models/: __init__.py  _base_model.py  _gamr_model.py  _pygam_model.py  _sklearn_model.py
cellrank/pl/: __init__.py  _aggregate_abs_probs.py  _circular_projection.py  _cluster_fates.py  _cluster_lineage.py  _cluster_lineages.py  _cluster_trends.py  _gene_trend.py  _graph.py  _heatmap.py  _init_term_states.py  _lineages.py  _log_odds.py  _utils.py
cellrank/plotting/: __init__.py  _cluster_fates.py  _cluster_lineages.py  _constants.py  _gene_trend.py  _graph.py  _heatmap.py  _lineages.py  _utils.py
cellrank/settings/: __init__.py  _settings.py
cellrank/tl/: __init__.py  _colors.py  _constants.py  _enum.py  _init_term_states.py  _initial_or_terminal_states.py  _lineage.py  _lineage_drivers.py  _lineages.py  _linear_solver.py  _permutation_test.py  _read.py  _root_final.py  _transition_matrix.py  _utils.py
cellrank/tools/: __init__.py  _cluster_fates.py  _colors.py  _constants.py  _exact_mc_test.py  _gene_importance.py  _lineage.py  _lineage_drivers.py  _lineages.py  _linear_solver.py  _markov_chain.py  _permutation_test.py  _read.py  _root_final.py  _transition_matrix.py  _utils.py
cellrank/ul/: __init__.py  _docs.py  _parallelize.py  _utils.py
cellrank/utils/: __init__.py  _docs.py  _parallelize.py  _utils.py
docs/: Makefile  conf.py  contributing.md  contributing.rst  index.md  index.rst  installation.rst  references.bib  requirements.txt  utils.py
docs/_ext/: typed_returns.py
docs/about/: cite.rst  index.rst  team.md  team.rst  version2.md  version2.rst
docs/api/: datasets.rst  developer.rst  estimators.rst  index.rst  kernels.rst  models.rst  plotting.rst
docs/release/: notes-1.0.0.rst  notes-1.2.0.rst  notes-1.3.0.rst  notes-1.3.1.rst  notes-1.4.0.rst  notes-1.5.0.rst  notes-1.5.1.rst
docs/source/: Untitled.ipynb  about.rst  about_cellrank.rst  api.rst  citing_cellrank.rst  classes.rst  conf.py  contributing.rst  contributors.rst  create_news_fragment.py  examples.rst  external_api.rst  index.rst  installation.rst  latest_additions.rst  modurl.py  references.bib  references.rst  release_notes.rst  spelling_wordlist.txt  team.rst  tutorials.rst  utils.py
docs/spelling/: general.txt
examples/: README.rst
examples/estimators/: README.rst  compute_abs_probs.py  compute_coarse_T.py  compute_eigendecomposition.py  compute_final_states_cflare.py  compute_final_states_gpcca.py  compute_fit.py  compute_gdpt.py  compute_lineage_drivers.py  compute_macrostates.py  compute_metastable_states.py  compute_schur_matrix.py  compute_schur_vectors.py  compute_spectrum.py  compute_terminal_states_gpcca.py  plot_gdpt.py  plot_metastable_states.py  plot_schur_matrix.py  plot_schur_vectors.py  plot_spectrum.py
examples/kernels/: README.rst  compute_kernel_tricks.py  plot_projection.py  plot_random_walk.py  plot_random_walks.py
examples/other/: README.rst  compute_kernel_tricks.py  compute_lineage_tricks.py  plot_model.py
examples/plotting/: README.rst  plot_circular_embedding.py  plot_cluster_fates.py  plot_cluster_lineage.py  plot_composition.py  plot_directed_paga.py  plot_gene_trends.py  plot_graph.py  plot_heatmap.py  plot_initial_states.py  plot_lineage_drivers.py  plot_lineages.py  plot_terminal_states.py
resources/images/: cluster_lineage.png.REMOVED.git-id  gene_trends.png.REMOVED.git-id  graph.png.REMOVED.git-id  index_figure_endpoints.png.REMOVED.git-id
src/cellrank/: __init__.py  _settings.py  datasets.py
tests/: _helpers.py  conftest.py  kernels_test.py  lineage_test.py  markov_chain_test.py  pipeline_test.py  test_base_estimator.py  test_cflare.py  test_colors.py  test_datasets.py  test_external.py  test_gpcca.py  test_kernels.py  test_lineage.py  test_lineage_drivers.py  test_linear_solver.py  test_logging.py  test_markov_chain.py  test_model.py  test_moscot_interface.py  test_pipeline.py  test_plotting.py  test_random_walk.py  test_read.py  test_tools.py  test_utils.py
tests/_ground_truth_adatas/: adata_100.h5ad  adata_100.h5ad.REMOVED.git-id  adata_200.h5ad  adata_200.h5ad.REMOVED.git-id  adata_50.h5ad  adata_50.h5ad.REMOVED.git-id
(+307 files in other folders)
