[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "cellrank"
description = "CellRank: dynamics from multi-view single-cell data"
readme = "README.rst"
keywords = [
  "bio-informatics",
  "GPCCA",
  "Markov chain",
  "RNA velocity",
  "single-cell",
]
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
maintainers = [
  { name = "Michal Klein", email = "info@cellrank.org" },
]

authors = [
  { name = "Marius Lange" },
  { name = "Michal Klein" },
  { name = "Philipp Weiler" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [
  "anndata>=0.9",
  "docrep>=0.3",
  "joblib>=0.13.1",
  "matplotlib>=3.5",
  "networkx>=2.2",
  "numba>=0.51,!=0.57",
  "numpy>=1.22",
  "pandas>=1.5",
  "pygam>=0.10",
  "pygpcca>=1.0.4",
  "scanpy>=1.7.2",
  "scikit-learn>=1.6",
  "scipy>=1.12",
  "scvelo>=0.2.5",
  "seaborn>=0.10",
  "wrapt>=1.12.1",
]

urls."Bug Tracker" = "https://github.com/theislab/cellrank/issues"
urls.Documentation = "https://cellrank.readthedocs.io"
urls.Download = "https://cellrank.readthedocs.io/en/latest/installation.html"
urls.Homepage = "https://github.com/theislab/cellrank"
urls."Source Code" = "https://github.com/theislab/cellrank"

[dependency-groups]
dev = [
  "pre-commit>=3",
]
test = [
  "coverage[toml]>=7",
  "igraph",
  "jax",
  "leidenalg",
  "pillow",
  "pytest>=8",
  "pytest-cov>=4",
  "pytest-mock>=3.5",
  "pytest-xdist",
  "zarr<3",
]
docs = [
  "furo>=2022.9.29",
  "myst-nb>=0.17.1",
  "sphinx>=5.1.1",
  "sphinx-autodoc-typehints>=1.10.3",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.3",
  "sphinx-tippy>=0.4.1",
  "sphinxcontrib-bibtex>=2.3",
  "sphinxcontrib-spelling>=7.6.2",
]

[tool.hatch.build.targets.wheel]
packages = [ "src/cellrank" ]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
installer = "uv"
dependency-groups = [ "dev" ]

[tool.hatch.envs.hatch-test]
dependency-groups = [ "test" ]

[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "stable" ]
python = [ "3.12", "3.14" ]

[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "pre" ]
python = [ "3.14" ]

[[tool.hatch.envs.hatch-test.overrides.matrix.deps.env-vars]]
key = "UV_PRERELEASE"
value = "allow"
if = [ "pre" ]

[tool.hatch.envs.docs]
dependency-groups = [ "docs" ]
scripts.build = "sphinx-build -M html docs docs/_build {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

[tool.ruff]
line-length = 120
src = [ "src" ]

format.docstring-code-format = true
lint.select = [
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "NPY", # NumPy-specific rules
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
  "RET", # flake8-raise
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  # `zip()` without an explicit `strict=` parameter (67 pre-existing, fix separately)
  "B905",
  # Missing docstring in public module
  "D100",
  # Missing docstring in public package
  "D104",
  # Missing docstring in magic method
  "D105",
  # Missing docstring in __init__
  "D107",
  # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E731",
  # allow I, O, l as variable names -> I is the identity matrix, i, j, k, l is reasonable indexing notation
  "E741",
  "PT011", # TODO/
  # Do not implicitly `return None` in function able to return non-`None` value
  "RET502",
  # Missing explicit `return` at the end of function able to return non-`None` value
  "RET503",
]
lint.exclude = [
  ".eggs",
  ".git",
  ".ruff_cache",
  ".tox",
  "__pypackages__",
  "_build",
  "build",
  "dist",
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "D" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.unfixable = [ "B", "BLE", "C4", "RET", "T20" ]
lint.flake8-quotes.inline-quotes = "double"
lint.flake8-tidy-imports.ban-relative-imports = "all"
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = "tests"
xfail_strict = true

[tool.coverage.run]
branch = true
parallel = true
source = [ "src/" ]
omit = [
  "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  '\#.*pragma:\s*no.?cover',
  "^if __name__ == .__main__.:$",
  '^\s*raise AssertionError\b',
  '^\s*raise NotImplementedError\b',
  '^\s*return NotImplemented\b',
]
precision = 2
show_missing = true
skip_empty = true
sort = "Miss"

[tool.rstcheck]
ignore_directives = [
  "toctree",
  "currentmodule",
  "autosummary",
  "module",
  "automodule",
  "autoclass",
  "bibliography",
  "grid",
]
ignore_roles = [
  "mod",
  "class",
  "attr",
  "func",
  "meth",
  "doc",
  "cite",
]
