[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "cellrank"
description = "CellRank: dynamics from multi-view single-cell data"
readme = "README.md"
keywords = [
  "bio-informatics",
  "GPCCA",
  "Markov chain",
  "RNA velocity",
  "single-cell",
]
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
maintainers = [
  { name = "Michal Klein", email = "info@cellrank.org" },
]

authors = [
  { name = "Marius Lange" },
  { name = "Michal Klein" },
  { name = "Philipp Weiler" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [
  "anndata>=0.11",
  "docrep>=0.3",
  "joblib>=1.4",
  "matplotlib>=3.9",
  "networkx>=3.4",
  "numba>=0.60",
  "numpy>=2",
  "pandas>=2.2",
  "pygam>=0.10",
  "pygpcca>=1.0.4",
  "rich>=13",
  "scanpy>=1.11",
  "scikit-learn>=1.6",
  "scipy>=1.14",
  "scvelo>=0.3",
  "seaborn>=0.13",
  "session-info2>=0.2",
  "wrapt>=1.16",
]

optional-dependencies.jax = [ "jax", "jaxlib" ]
optional-dependencies.moscot = [ "moscot" ]
optional-dependencies.petsc = [ "mpi4py", "petsc4py", "slepc4py" ]
optional-dependencies.plot = [ "adjusttext" ]
optional-dependencies.r = [ "rpy2>=3.3" ]
urls."Bug Tracker" = "https://github.com/theislab/cellrank/issues"
urls.Documentation = "https://cellrank.readthedocs.io"
urls.Download = "https://cellrank.readthedocs.io/en/latest/installation.html"
urls.Homepage = "https://github.com/theislab/cellrank"
urls."Source Code" = "https://github.com/theislab/cellrank"

[dependency-groups]
dev = [
  "pre-commit>=3",
]
test = [
  "adjusttext",
  "coverage[toml]>=7",
  "igraph>=1",
  "jax",
  "pillow>=10",
  "pytest>=8",
  "pytest-cov>=6",
  "pytest-mock>=3.14",
  "pytest-xdist",
]
docs = [
  "furo>=2024.8.6",
  "myst-nb>=1.2",
  "sphinx>=7.4",
  "sphinx-autodoc-typehints>=2.5",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.6",
  "sphinx-tippy>=0.4.3",
  "sphinxcontrib-bibtex>=2.6",
  "sphinxcontrib-spelling>=8",
]

[tool.hatch.build.targets.wheel]
packages = [ "src/cellrank" ]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
installer = "uv"
dependency-groups = [ "dev" ]

[tool.hatch.envs.hatch-test]
dependency-groups = [ "test" ]

[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "stable" ]
python = [ "3.12", "3.14" ]

[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "pre" ]
python = [ "3.14" ]

[[tool.hatch.envs.hatch-test.overrides.matrix.deps.env-vars]]
key = "UV_PRERELEASE"
value = "allow"
if = [ "pre" ]

[tool.hatch.envs.docs]
dependency-groups = [ "docs" ]
scripts.build = "sphinx-build -M html docs docs/_build {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

[tool.ruff]
line-length = 120
src = [ "src" ]

format.docstring-code-format = true
lint.select = [
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "NPY", # NumPy-specific rules
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
  "RET", # flake8-raise
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  # `zip()` without an explicit `strict=` parameter (67 pre-existing, fix separately)
  "B905",
  # Missing docstring in public module
  "D100",
  # Missing docstring in public package
  "D104",
  # Missing docstring in magic method
  "D105",
  # Missing docstring in __init__
  "D107",
  # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E731",
  # allow I, O, l as variable names -> I is the identity matrix, i, j, k, l is reasonable indexing notation
  "E741",
  "PT011", # TODO/
  # Do not implicitly `return None` in function able to return non-`None` value
  "RET502",
  # Missing explicit `return` at the end of function able to return non-`None` value
  "RET503",
]
lint.exclude = [
  ".eggs",
  ".git",
  ".ruff_cache",
  ".tox",
  "__pypackages__",
  "_build",
  "build",
  "dist",
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "D" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.unfixable = [ "B", "BLE", "C4", "RET", "T20" ]
lint.flake8-quotes.inline-quotes = "double"
lint.flake8-tidy-imports.ban-relative-imports = "all"
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = "tests"
xfail_strict = true
addopts = [ "--import-mode=importlib" ]

[tool.coverage.run]
branch = true
parallel = true
source = [ "src/" ]
omit = [
  "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  '\#.*pragma:\s*no.?cover',
  "^if __name__ == .__main__.:$",
  '^\s*raise AssertionError\b',
  '^\s*raise NotImplementedError\b',
  '^\s*return NotImplemented\b',
]
precision = 2
show_missing = true
skip_empty = true
sort = "Miss"

[tool.rstcheck]
ignore_directives = [
  "toctree",
  "currentmodule",
  "autosummary",
  "module",
  "automodule",
  "autoclass",
  "bibliography",
  "grid",
]
ignore_roles = [
  "mod",
  "class",
  "attr",
  "func",
  "meth",
  "doc",
  "cite",
]

[tool.uv]
# pygpcca 1.0.4 incorrectly pins jinja2==3.0.3; override until next release
override-dependencies = [ "jinja2>=3.1" ]
